# lodgeit

./: .gitignore  .gitreview  .stestr.conf  .zuul.yaml  Dockerfile  README  bindep.txt  deployed.wsgi  manage.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test_requirements.txt  tox.ini
lodgeit/: __init__.py  application.py  database.py  local.py  models.py  urls.py  utils.py
lodgeit/cmd/: managedb.py
lodgeit/controllers/: __init__.py  json.py  pastes.py  static.py  xmlrpc.py
lodgeit/i18n/: __init__.py  messages.pot
lodgeit/i18n/de/LC_MESSAGES/: messages.mo  messages.po
lodgeit/lib/: antispam.py  captcha.py  compilerparser.py  diff.py  filterable.py  highlighting.py  json.py  webapi.py  xmlrpc.py
lodgeit/views/: about.html  layout.html  new_paste.html
lodgeit/views/help/: api.html  integration.html
scripts/: lodgeit-db.py  lodgeit.py  make-bootstrap.py
tests/: __init__.py
tests/unittest/: test_api.py  test_urls.py
