[metadata]
name = lodgeit
description-file =
    README
license = BSD
summary = LodgeIt implements a pastebin
author = OpenDev
author-email = openstack-infra@lists.openstack.org

[entry_points]
wsgi_scripts =
    lodgeit-wsgi = lodgeit.application:make_app
console_scripts =
    lodgeit-managedb = lodgeit.cmd.managedb:main