[metadata]
name = lodgeit
description-file =
    README
license = BSD
summary = LodgeIt implements a pastebin
author = OpenDev
author-email = openstack-infra@lists.openstack.org
home-page = https://opendev.org/opendev/lodgeit
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
[entry_points]
wsgi_scripts =
    lodgeit-wsgi = lodgeit.application:make_app
console_scripts =
    lodgeit-managedb = lodgeit.cmd.managedb:main
